feat: enhance filament management UI with color selection and new fields
- Added a "Colors" column to the filaments table and implemented color dots rendering.
- Updated filament creation form to include new fields: Material Subgroup, Finish Type, Color Mode, and Color Selection.
- Introduced functionality for adding new colors directly in the filament creation form.
- Improved error handling and user feedback with modal alerts for delete confirmations across various pages.
- Updated login page to use a PNG logo instead of SVG.
- Enhanced global styles with modal and color picker styles.

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -47,7 +47,9 @@
     "note": "Notiz",
     "never": "Nie",
     "empty": "Leer",
-    "unknown": "Unbekannt"
+    "unknown": "Unbekannt",
+    "confirmTitle": "Bestätigung",
+    "errorTitle": "Fehler"
   },
   "login": {
     "title": "Anmeldung - FilaMan",
@@ -106,6 +108,7 @@
     "rawMaterial": "Rohmaterial",
     "spoolWeight": "Spulengewicht",
     "color": "Farbe",
+    "colors": "Farben",
     "colorName": "Farbname",
     "colorNamePlaceholder": "z.B. Feuerrot",
     "designationPlaceholder": "z.B. PLA Basic Rot",
@@ -123,7 +126,41 @@
     "notFound": "Filament nicht gefunden",
     "unknownManufacturer": "Unbekannter Hersteller",
     "noSpools": "Keine Spulen für dieses Filament.",
-    "filamentCount": "{count} Filament(e)"
+    "filamentCount": "{count} Filament(e)",
+    "selectType": "Typ wählen...",
+    "addCustomType": "Eigenen Typ hinzufügen...",
+    "customTypePlaceholder": "z.B. HIPS",
+    "customTypeLabel": "Eigener Typ *",
+    "failedLoadTypes": "Filamenttypen konnten nicht geladen werden",
+    "materialSubgroup": "Material-Untergruppe",
+    "materialSubgroupPlaceholder": "z.B. Silk, Matte, CF, PLA+",
+    "finishType": "Oberflächentyp",
+    "finishSolid": "Solid",
+    "finishTranslucent": "Transluzent",
+    "finishNeon": "Neon",
+    "finishGlow": "Nachleuchtend",
+    "colorMode": "Farbmodus",
+    "colorModeSingle": "Einfarbig",
+    "colorModeMulti": "Mehrfarbig",
+    "multiColorStyle": "Mehrfarb-Stil",
+    "styleStriped": "Gestreift",
+    "styleGradient": "Verlauf",
+    "colorHintSingle": "Filamentfarbe auswählen.",
+    "colorHintMulti": "Mehrere Farben in Reihenfolge auswählen.",
+    "addNewColor": "Neue Farbe anlegen",
+    "colorPickerLabel": "Farbe",
+    "colorNameLabel": "Name *",
+    "manufacturerColorName": "Hersteller-Farbbezeichnung",
+    "price": "Preis",
+    "pricePlaceholder": "z.B. 24,99",
+    "density": "Dichte (g/cm³)",
+    "densityPlaceholder": "z.B. 1,24",
+    "shopUrl": "Shop-URL",
+    "shopUrlPlaceholder": "z.B. https://shop.example.com/filament",
+    "noColorsAvailable": "Keine Farben vorhanden. Unten eine anlegen.",
+    "failedLoadColors": "Farben konnten nicht geladen werden",
+    "failedCreateColor": "Farbe konnte nicht erstellt werden",
+    "colorRequired": "Bitte mindestens eine Farbe auswählen."
   },
   "spools": {
     "title": "Spulen",
