--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -47,7 +47,9 @@
     "note": "Note",
     "never": "Never",
     "empty": "Empty",
-    "unknown": "Unknown"
+    "unknown": "Unknown",
+    "confirmTitle": "Confirm",
+    "errorTitle": "Error"
   },
   "login": {
     "title": "Login - FilaMan",
@@ -106,6 +108,7 @@
     "rawMaterial": "Raw Material",
     "spoolWeight": "Spool Weight",
     "color": "Color",
+    "colors": "Colors",
     "colorName": "Color Name",
     "colorNamePlaceholder": "e.g. Fire Engine Red",
     "designationPlaceholder": "e.g. PLA Basic Red",
@@ -123,7 +126,41 @@
     "notFound": "Filament not found",
     "unknownManufacturer": "Unknown manufacturer",
     "noSpools": "No spools for this filament.",
-    "filamentCount": "{count} filament(s)"
+    "filamentCount": "{count} filament(s)",
+    "selectType": "Select type...",
+    "addCustomType": "Add custom type...",
+    "customTypePlaceholder": "e.g. HIPS",
+    "customTypeLabel": "Custom Type *",
+    "failedLoadTypes": "Failed to load filament types",
+    "materialSubgroup": "Material Subgroup",
+    "materialSubgroupPlaceholder": "e.g. Silk, Matte, CF, PLA+",
+    "finishType": "Finish Type",
+    "finishSolid": "Solid",
+    "finishTranslucent": "Translucent",
+    "finishNeon": "Neon",
+    "finishGlow": "Glow in the Dark",
+    "colorMode": "Color Mode",
+    "colorModeSingle": "Single Color",
+    "colorModeMulti": "Multi Color",
+    "multiColorStyle": "Multi Color Style",
+    "styleStriped": "Striped",
+    "styleGradient": "Gradient",
+    "colorHintSingle": "Select the filament color.",
+    "colorHintMulti": "Select multiple colors in order.",
+    "addNewColor": "Add New Color",
+    "colorPickerLabel": "Color",
+    "colorNameLabel": "Name *",
+    "manufacturerColorName": "Manufacturer Color Name",
+    "price": "Price",
+    "pricePlaceholder": "e.g. 24.99",
+    "density": "Density (g/cm³)",
+    "densityPlaceholder": "e.g. 1.24",
+    "shopUrl": "Shop URL",
+    "shopUrlPlaceholder": "e.g. https://shop.example.com/filament",
+    "noColorsAvailable": "No colors available. Add one below.",
+    "failedLoadColors": "Failed to load colors",
+    "failedCreateColor": "Failed to create color",
+    "colorRequired": "Please select at least one color."
   },
   "spools": {
     "title": "Spools",
