Add filament editing and detail pages with internationalization support
- Implemented the filament editing page with a form for updating filament details.
- Added a detail view for filaments displaying relevant information and associated spools.
- Enhanced internationalization by adding German translations for filament-related strings.
- Included loading states and error handling for fetching filament data and colors.
- Created a color selection feature with options for single and multi-color modes.
- Integrated manufacturer and type selection with dynamic loading from the API.

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -160,7 +160,10 @@
     "noColorsAvailable": "Keine Farben vorhanden. Unten eine anlegen.",
     "failedLoadColors": "Farben konnten nicht geladen werden",
     "failedCreateColor": "Farbe konnte nicht erstellt werden",
-    "colorRequired": "Bitte mindestens eine Farbe auswählen."
+    "colorRequired": "Bitte mindestens eine Farbe auswählen.",
+    "editFilament": "Filament bearbeiten",
+    "saveFilament": "Filament speichern",
+    "failedUpdate": "Filament konnte nicht aktualisiert werden"
   },
   "spools": {
     "title": "Spulen",
