feat: Add plugin system and example polling driver
- Introduced a new plugin system for FilaMan, allowing users to extend printer connectivity via plugins.
- Added documentation for the plugin system in `docs/PLUGINS.md`.
- Implemented frontend support for plugin management, including installation and uninstallation.
- Created an example polling driver plugin demonstrating HTTP polling for AMS status.
- Updated German and English translations for new plugin-related UI elements.

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -305,7 +305,32 @@
     "devices": "Geräte",
     "devicesDesc": "Geräte-Token verwalten",
     "system": "System",
-    "systemDesc": "Demnächst verfügbar",
+    "systemDesc": "Plugins und Systemverwaltung",
+    "systemPlugins": "Plugins",
+    "installPlugin": "Plugin installieren",
+    "uninstallPlugin": "Deinstallieren",
+    "pluginDetails": "Details",
+    "pluginVersion": "Version",
+    "pluginAuthor": "Autor",
+    "pluginDriver": "Treiber-Key",
+    "pluginDescription": "Beschreibung",
+    "pluginHomepage": "Homepage",
+    "pluginLicense": "Lizenz",
+    "pluginInstalledAt": "Installiert am",
+    "pluginConfigSchema": "Konfigurations-Schema",
+    "pluginZipFile": "Plugin ZIP-Datei",
+    "pluginDropHint": "ZIP-Datei hierher ziehen oder klicken zum Ausw\u00e4hlen",
+    "pluginValidationOk": "Pr\u00fcfung bestanden",
+    "pluginValidationFailed": "Pr\u00fcfung fehlgeschlagen",
+    "pluginUploading": "Wird hochgeladen...",
+    "pluginInstalling": "Installiere...",
+    "pluginInstallFailed": "Plugin konnte nicht installiert werden",
+    "pluginUninstallFailed": "Plugin konnte nicht deinstalliert werden",
+    "pluginNotZip": "Nur ZIP-Dateien sind erlaubt",
+    "pluginTooLarge": "Datei zu gro\u00df (max. 10 MB)",
+    "pluginFailedLoad": "Plugins konnten nicht geladen werden",
+    "noPlugins": "Keine Plugins installiert",
+    "confirmUninstall": "M\u00f6chten Sie das Plugin \"{name}\" wirklich deinstallieren? Drucker, die diesen Treiber verwenden, m\u00fcssen manuell umkonfiguriert werden.",
     "backToAdmin": "Zurück zum Admin-Bereich",
     "addUser": "Benutzer hinzufügen",
     "editUser": "Benutzer bearbeiten",
