--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -305,7 +305,32 @@
     "devices": "Devices",
     "devicesDesc": "Manage device tokens",
     "system": "System",
-    "systemDesc": "Coming soon",
+    "systemDesc": "Plugins and system management",
+    "systemPlugins": "Plugins",
+    "installPlugin": "Install Plugin",
+    "uninstallPlugin": "Uninstall",
+    "pluginDetails": "Details",
+    "pluginVersion": "Version",
+    "pluginAuthor": "Author",
+    "pluginDriver": "Driver Key",
+    "pluginDescription": "Description",
+    "pluginHomepage": "Homepage",
+    "pluginLicense": "License",
+    "pluginInstalledAt": "Installed at",
+    "pluginConfigSchema": "Configuration Schema",
+    "pluginZipFile": "Plugin ZIP File",
+    "pluginDropHint": "Drag & Drop ZIP file here or click to select",
+    "pluginValidationOk": "Validation passed",
+    "pluginValidationFailed": "Validation failed",
+    "pluginUploading": "Uploading...",
+    "pluginInstalling": "Installing...",
+    "pluginInstallFailed": "Failed to install plugin",
+    "pluginUninstallFailed": "Failed to uninstall plugin",
+    "pluginNotZip": "Only ZIP files are allowed",
+    "pluginTooLarge": "File too large (max. 10 MB)",
+    "pluginFailedLoad": "Failed to load plugins",
+    "noPlugins": "No plugins installed",
+    "confirmUninstall": "Are you sure you want to uninstall the plugin \"{name}\"? Printers using this driver must be reconfigured manually.",
     "backToAdmin": "Back to Admin",
     "addUser": "Add User",
     "editUser": "Edit User",
