feat: Implement plugin activation toggle functionality and update UI

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -329,6 +329,9 @@
     "pluginNotZip": "Nur ZIP-Dateien sind erlaubt",
     "pluginTooLarge": "Datei zu gro\u00df (max. 10 MB)",
     "pluginFailedLoad": "Plugins konnten nicht geladen werden",
+    "pluginActivate": "Plugin aktivieren",
+    "pluginDeactivate": "Plugin deaktivieren",
+    "pluginToggleFailed": "Plugin-Status konnte nicht ge\u00e4ndert werden",
     "noPlugins": "Keine Plugins installiert",
     "confirmUninstall": "M\u00f6chten Sie das Plugin \"{name}\" wirklich deinstallieren? Drucker, die diesen Treiber verwenden, m\u00fcssen manuell umkonfiguriert werden.",
     "backToAdmin": "Zurück zum Admin-Bereich",
