--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -329,6 +329,9 @@
     "pluginNotZip": "Only ZIP files are allowed",
     "pluginTooLarge": "File too large (max. 10 MB)",
     "pluginFailedLoad": "Failed to load plugins",
+    "pluginActivate": "Activate plugin",
+    "pluginDeactivate": "Deactivate plugin",
+    "pluginToggleFailed": "Failed to change plugin status",
     "noPlugins": "No plugins installed",
     "confirmUninstall": "Are you sure you want to uninstall the plugin \"{name}\"? Printers using this driver must be reconfigured manually.",
     "backToAdmin": "Back to Admin",
