feat(i18n): update German and English translations for new features and labels
feat(spoolman): add Spoolman import functionality with connection, preview, and import steps

feat(admin): implement killswitch feature for permanent data deletion with confirmation prompts

fix(manufacturers): streamline manufacturer data loading and display filament counts directly from API

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -49,7 +49,8 @@
     "empty": "Leer",
     "unknown": "Unbekannt",
     "confirmTitle": "Bestätigung",
-    "errorTitle": "Fehler"
+    "errorTitle": "Fehler",
+    "open": "Öffnen"
   },
   "login": {
     "title": "Anmeldung - FilaMan",
@@ -307,6 +308,11 @@
     "system": "System",
     "systemDesc": "Plugins und Systemverwaltung",
     "systemPlugins": "Plugins",
+    "backToSystem": "Zurück zum System",
+    "pluginType": "Typ",
+    "pluginTypeDriver": "Treiber",
+    "pluginTypeImport": "Import",
+    "pluginTypeIntegration": "Integration",
     "installPlugin": "Plugin installieren",
     "uninstallPlugin": "Deinstallieren",
     "pluginDetails": "Details",
@@ -386,6 +392,51 @@
     "roleLabel": "Rolle: {name} ({key})",
     "failedUpdatePermissions": "Berechtigungen konnten nicht aktualisiert werden",
     "selectRoleHint": "Klicke auf eine Rolle, um ihre Berechtigungen anzuzeigen",
-    "permissionsForRole": "Berechtigungen f\u00fcr"
+    "permissionsForRole": "Berechtigungen f\u00fcr",
+    "dangerZone": "Gefahrenzone",
+    "killswitchTitle": "Alle Daten l\u00f6schen",
+    "killswitchDesc": "Alle Spulen, Filamente, Hersteller, Farben, Standorte und Drucker samt Logs und Events unwiderruflich l\u00f6schen. Benutzer, Rollen, Berechtigungen und Ger\u00e4te sind nicht betroffen.",
+    "killswitchButton": "Alle Daten l\u00f6schen",
+    "killswitchConfirm": "Sind Sie sicher, dass Sie ALLE Spulen, Filamente, Hersteller, Farben, Standorte und Drucker l\u00f6schen m\u00f6chten? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden!",
+    "killswitchConfirm2": "Hiermit werden ALLE Daten unwiderruflich gel\u00f6scht. Sind Sie wirklich sicher?",
+    "killswitchExecuting": "L\u00f6sche...",
+    "killswitchSuccess": "{count} Datens\u00e4tze erfolgreich gel\u00f6scht.",
+    "killswitchFailed": "Killswitch konnte nicht ausgef\u00fchrt werden"
+  },
+  "spoolman": {
+    "title": "Spoolman Import",
+    "subtitle": "Filamente, Spulen, Hersteller und Standorte aus einer Spoolman-Instanz importieren.",
+    "stepConnection": "Verbindung",
+    "stepPreview": "Vorschau",
+    "stepImport": "Import",
+    "spoolmanUrl": "Spoolman URL",
+    "testConnection": "Verbindung testen",
+    "testing": "Teste...",
+    "connectionSuccess": "Verbindung erfolgreich",
+    "connectionFailed": "Verbindung fehlgeschlagen",
+    "urlRequired": "Bitte eine Spoolman-URL eingeben",
+    "loadPreview": "Vorschau laden",
+    "loadingPreview": "Laden...",
+    "previewDesc": "Pr\u00fcfen Sie die Daten, die aus Spoolman importiert werden.",
+    "previewFailed": "Vorschau konnte nicht geladen werden",
+    "previewVendors": "Hersteller",
+    "previewLocations": "Standorte",
+    "previewColors": "Farben",
+    "previewFilaments": "Filamente",
+    "previewSpools": "Spulen",
+    "dataType": "Datentyp",
+    "count": "Anzahl",
+    "andMore": "{count} weitere...",
+    "importDesc": "Import starten. Vorhandene Daten werden nicht \u00fcberschrieben.",
+    "startImport": "Import starten",
+    "importing": "Importiere...",
+    "importComplete": "Import abgeschlossen",
+    "importFailed": "Import fehlgeschlagen",
+    "confirmImport": "M\u00f6chten Sie wirklich alle Daten aus Spoolman importieren? Bestehende Eintr\u00e4ge (gleicher Name) werden \u00fcbersprungen.",
+    "importResults": "Import-Ergebnisse",
+    "created": "erstellt",
+    "skipped": "\u00fcbersprungen",
+    "warnings": "Warnungen",
+    "errors": "Fehler"
   }
 }
