--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -49,7 +49,8 @@
     "empty": "Empty",
     "unknown": "Unknown",
     "confirmTitle": "Confirm",
-    "errorTitle": "Error"
+    "errorTitle": "Error",
+    "open": "Open"
   },
   "login": {
     "title": "Login - FilaMan",
@@ -307,6 +308,11 @@
     "system": "System",
     "systemDesc": "Plugins and system management",
     "systemPlugins": "Plugins",
+    "backToSystem": "Back to System",
+    "pluginType": "Type",
+    "pluginTypeDriver": "Driver",
+    "pluginTypeImport": "Import",
+    "pluginTypeIntegration": "Integration",
     "installPlugin": "Install Plugin",
     "uninstallPlugin": "Uninstall",
     "pluginDetails": "Details",
@@ -386,6 +392,51 @@
     "roleLabel": "Role: {name} ({key})",
     "failedUpdatePermissions": "Failed to update permissions",
     "selectRoleHint": "Click on a role to see its permissions",
-    "permissionsForRole": "Permissions for"
+    "permissionsForRole": "Permissions for",
+    "dangerZone": "Danger Zone",
+    "killswitchTitle": "Delete all data",
+    "killswitchDesc": "Permanently delete all spools, filaments, manufacturers, colors, locations, and printers including their logs and events. Users, roles, permissions, and devices are not affected.",
+    "killswitchButton": "Delete all data",
+    "killswitchConfirm": "Are you sure you want to delete ALL spools, filaments, manufacturers, colors, locations, and printers? This action cannot be undone!",
+    "killswitchConfirm2": "This will permanently delete ALL data. Are you really sure?",
+    "killswitchExecuting": "Deleting...",
+    "killswitchSuccess": "{count} rows deleted successfully.",
+    "killswitchFailed": "Failed to execute killswitch"
+  },
+  "spoolman": {
+    "title": "Spoolman Import",
+    "subtitle": "Import filaments, spools, manufacturers, and locations from a Spoolman instance.",
+    "stepConnection": "Connection",
+    "stepPreview": "Preview",
+    "stepImport": "Import",
+    "spoolmanUrl": "Spoolman URL",
+    "testConnection": "Test Connection",
+    "testing": "Testing...",
+    "connectionSuccess": "Connection successful",
+    "connectionFailed": "Connection failed",
+    "urlRequired": "Please enter a Spoolman URL",
+    "loadPreview": "Load Preview",
+    "loadingPreview": "Loading...",
+    "previewDesc": "Review the data that will be imported from Spoolman.",
+    "previewFailed": "Failed to load preview",
+    "previewVendors": "Manufacturers",
+    "previewLocations": "Locations",
+    "previewColors": "Colors",
+    "previewFilaments": "Filaments",
+    "previewSpools": "Spools",
+    "dataType": "Data Type",
+    "count": "Count",
+    "andMore": "{count} more...",
+    "importDesc": "Start the import. Existing data will not be overwritten.",
+    "startImport": "Start Import",
+    "importing": "Importing...",
+    "importComplete": "Import complete",
+    "importFailed": "Import failed",
+    "confirmImport": "Are you sure you want to import all data from Spoolman? Existing entries (same name) will be skipped.",
+    "importResults": "Import Results",
+    "created": "created",
+    "skipped": "skipped",
+    "warnings": "Warnings",
+    "errors": "Errors"
   }
 }
