feat: Enhance manufacturer and spool listings with additional counts and materials

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -291,6 +291,8 @@
     "url": "URL",
     "urlPlaceholder": "z.B. https://bambulab.com",
     "filaments": "Filamente",
+    "spools": "Spulen",
+    "materials": "Materialien",
     "failedLoad": "Hersteller konnten nicht geladen werden",
     "failedSave": "Hersteller konnte nicht gespeichert werden",
     "failedDelete": "Hersteller konnte nicht gelöscht werden",
