feat: implement dashboard statistics endpoint and UI components

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -73,7 +73,11 @@
     "emptySpools": "Leere Spulen",
     "allSufficient": "Alle Spulen haben ausreichend Filament",
     "noRecentActivity": "Keine aktuelle Aktivität",
-    "spoolId": "Spule #{id}"
+    "spoolId": "Spule #{id}",
+    "manufacturersWithSpools": "Hersteller (nicht leer)",
+    "manufacturersLowStock": "Hersteller (fast leer)",
+    "filamentTypes": "Filament-Arten",
+    "noData": "Keine Daten"
   },
   "settings": {
     "title": "Einstellungen",
