feat: erweitere Dashboard-Statistiken um Low-Stock-Spulen und aktualisiere UI-Komponenten

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -75,9 +75,13 @@
     "noRecentActivity": "Keine aktuelle Aktivität",
     "spoolId": "Spule #{id}",
     "manufacturersWithSpools": "Hersteller (nicht leer)",
-    "manufacturersLowStock": "Hersteller (fast leer)",
     "filamentTypes": "Filament-Arten",
-    "noData": "Keine Daten"
+    "noData": "Keine Daten",
+    "lowStockSpools": "Spulen (fast leer)",
+    "spool": "Spule",
+    "filament": "Filament",
+    "manufacturer": "Hersteller",
+    "remaining": "Rest"
   },
   "settings": {
     "title": "Einstellungen",
