feat: erweitere Dashboard-Statistiken um Spulen-Status, Filament- und Lagerorte-Statistiken

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -81,7 +81,16 @@
     "spool": "Spule",
     "filament": "Filament",
     "manufacturer": "Hersteller",
-    "remaining": "Rest"
+    "remaining": "Rest",
+    "spools": "Spulen",
+    "spoolStatus": "Spulen-Status",
+    "filamentStats": "Filament-Statistik",
+    "locationStats": "Lagerorte",
+    "statusFull": "Voll",
+    "statusNormal": "Normal",
+    "statusLow": "Niedrig",
+    "statusCritical": "Kritisch",
+    "statusEmpty": "Leer"
   },
   "settings": {
     "title": "Einstellungen",
