feat: füge Bestätigungsnachricht in die Übersetzungen für Deutsch und Englisch hinzu

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -51,6 +51,7 @@
     "online": "Online",
     "offline": "Offline",
     "confirmTitle": "Bestätigung",
+    "confirm": "Bestätigen",
     "errorTitle": "Fehler",
     "open": "Öffnen",
     "customFields": "Eigene Felder"
