--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -51,6 +51,7 @@
     "online": "Online",
     "offline": "Offline",
     "confirmTitle": "Confirm",
+    "confirm": "Confirm",
     "errorTitle": "Error",
     "open": "Open",
     "customFields": "Custom Fields"
